<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">MobiDogi</string>
  <string name="title_home">Koti</string>
  <string name="title_dashboard">Yhteys kouluttajaan</string>
  <string name="title_notifications">Treenipäiväkirja</string>
  <string name="title_mitenkoiraoppii">Miten koira oppii</string>
  <string name="title_lenkkeily">Lenkkeily</string>
  <string name="title_luoksetulo">Luoksetulo</string>
  <string name="title_hoitotoimenpiteet">Hoitotoimenpiteet</string>
  <string name="title_yksinolo">Yksinolo</string>
  <string name="title_hihnan_kirous">Hihnan kirous -paketti</string>
  <string name="title_kontakti">Kontakti</string>
  <string name="title_lahella_pysyminen">Lähellä pysyminen</string>
  <string name="title_valineet">Välineet</string>
  <string name="title_hairitseva_kaytos">Häiritsevä käytös</string>
  <string name="title_hihnassa_kauniisti_kavely">Hihnassa kauniisti kävely</string>
  <string name="title_kaupunkikavely">Kaupunkikävely</string>
  <string name="title_uloslahto_rauhallisesti">Uloslähtö rauhallisesti</string>
  <string name="title_motivointi">Motivointi</string>
  <string name="title_ohittaminen">Ohittaminen</string>
  <string name="title_luopuminen">Luopuminen</string>
  <string name="title_omistajasta_poispain">Omistajasta poispäin</string>
  <string name="title_luento_luoksetulo">Luento: luoksetulo</string>
  <string name="title_luoksetulonkoulutus">Luoksetulon koulutus</string>
  <string name="title_activity_login">Kirjaudu</string>
  <string name="prompt_email">Sähköposti</string>
  <string name="prompt_password">Salasana</string>
  <string name="action_sign_in">Kirjaudu tai rekisteröidy</string>
  <string name="action_sign_in_short">Kirjaudu</string>
  <string name="welcome">"Tervetuloa !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Salasanan on oltava vähintään 8 kirjainta</string>
  <string name="login_failed">"Kirjautuminen epäonnistui"</string>
  <string name="attemptsleft">Yrityksiä jäljellä </string>
  <string name="login_logo">Login logo</string>
  <string name="title_activity_second">SecondActivity</string>
  <string name="luento_oppiminen">Luento: oppiminen</string>
  <string name="title_activity_third">ThirdActivity</string>
  <string name="ehdollistaminen_ohje">Ehdollistaminen</string>
  <string name="kohdentaminen_ohje">Kohdentaminen</string>
  <string name="omistajastapois_ohje">Omistajasta pois</string>
  <string name="rauhoittuminen_ohje">Rauhoittuminen</string>
  <string name="lahellapysyminen_ohje">Lähellä pysyminen</string>
  <string name="title_activity_test">TestActivity</string>
  <string name="title_activity_ehdollistaminen_ohje_pdf">EhdollistaminenOhjePDF</string>
  <string name="title_activity_view">ViewActivity</string>
  <string name="title_activity_hihnan_kirous">HihnanKirousActivity</string>
  <string name="title_activity_luoksetulo_valikko">LuoksetuloValikkoActivity</string>
  <string name="title_hoitotoimenpiteet_valikko">Luento: Hoitotoimenpiteet</string>
  <string name="title_alustallemeno">Alustalle meno</string>
  <string name="title_yhteyskouluttajaan">Yhteys kouluttajaan</string>
  <string name="title_hoitotoimenpiteet_ohje">Ohje hoitotoimenpiteiden käsittelyyn</string>
  <string name="title_luento_arsyttavakaytos">Luento: ärsyttävä käytös</string>
  <string name="title_aktivointivinkkeja">Aktivointivinkkejä</string>
  <string name="title_poiskouluttaminen">Pois kouluttaminen</string>

  <string name="kuvaa_video">Kuvaa 2 min video, jossa kerrot lyhyesti ja jossa videoit koirasi käytöstä, johon haluat neuvoa.</string>
  <string name="aloita_kuvaus">Aloita</string>
  <string name="tarkista_kuvaus">Tarkista video</string>
  <string name="laheta_video">Lähetä</string>
  <string name="no_event">Ei merkintää</string>
  <string name="calendar_permission_required">Pääsy kalenteriin tarvitaan</string>
  <string name="all_day">Koko päivä</string>
  <string name="grant_access">Hyväksy pääsy</string>
  <string name="today">Tänään</string>
  <string name="title">Treenin nimi</string>
  <string name="event_time">Treeniaika</string>
  <string name="event_calendar">Treenipäiväkirja</string>
  <string name="warning_empty_title">Treenin nimi vaaditaan</string>
  <string name="choose_calendar">Valitse kalenteri</string>
  <string name="create_event">Luo uusi treenimerkintä</string>
  <string name="edit_event">Muokkaa merkintää</string>
  <string name="save">Tallenna</string>
  <string name="delete">Poista</string>
  <string name="confirm_delete">Haluatko varmasti poistaa merkinnän?</string>
  <string name="confirm_discard_changes">Hylkää muutokset</string>
  <string name="warning_missing_calendar">Valitsisitko kalenterin?</string>
  <string name="end_time">Päätösaika</string>
  <string name="default_calendar_name">Paikallinen kalenteri</string>
  <string name="event_created">Merkintä luotu.</string>
  <string name="event_updated">Merkintä päivitetty</string>
  <string name="event_deleted">Merkintä poistettu</string>
  <string name="morning">Aamu</string>
  <string name="afternoon">Iltapäivä</string>
  <string name="night">Yö</string>
  <string name="fahrenheit">Lämpötila</string>
  <string name="show_weather">Näytä sää</string>
  <string name="updating_weather" tools:ignore="TypographyEllipsis">Päivitetään säätietoja...</string>
  <string name="location_permission_required">Sään päivitys vaatii sijaintitietosi</string>
  <string name="week_start">Viikon aloitus</string>
  <string name="saturday">Lauantai</string>
  <string name="sunday">Sunnuntai</string>
  <string name="monday">Maanantai</string>
  <string name="open_drawer">Avaa</string>
  <string name="close_drawer">Sulje</string>
  <string name="calendars">Kalenterit</string>
  <string name="error_location">Sijaintitietosi eivät ole saatavilla</string>
</resources>
