<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="?attr/actionBarSize">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
      android:id="@+id/activity_third"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="1dp"
      android:paddingLeft="4dp"
      android:paddingRight="4dp"
      android:paddingTop="1dp"
      tools:context="com.example.mobidogi.LenkkeilyValikkoActivity">

      <Button
        android:contentDescription="@string/title_uloslahto_rauhallisesti"
        android:id="@+id/simpleImageViewUloslahto"
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:drawablePadding="@null"
        android:background="@drawable/uloslahto_hihnakaytos_paketti"
        android:paddingTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/title_uloslahto_rauhallisesti"
        android:textSize="@dimen/pictureTitles"
        android:textColor="@color/colorTitles2"
        app:fontFamily="@font/cinzel_bold"/>

      <Button
        android:contentDescription="@string/title_hihnassa_kauniisti_kavely"
        android:id="@+id/simpleImageViewHihnassaKauniisti"
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:drawablePadding="@null"
        android:background="@drawable/hihnassa_kauniisti_kavely"
        android:paddingTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/title_hihnassa_kauniisti_kavely"
        android:textSize="@dimen/pictureTitles"
        android:textColor="@color/colorTitles2"
        app:fontFamily="@font/cinzel_bold"/>

      <Button
        android:contentDescription="@string/title_valineet"
        android:id="@+id/simpleImageViewValineet"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:drawablePadding="@null"
        android:background="@drawable/valineet_hihnakaytos_paketti"
        android:paddingTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/title_valineet"
        android:textSize="@dimen/pictureTitles"
        android:textColor="@color/colorTitles2"
        app:fontFamily="@font/cinzel_bold"/>

      <Button
        android:contentDescription="@string/title_kontakti"
        android:id="@+id/simpleImageViewKontakti"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:drawablePadding="@null"
        android:background="@drawable/kontakti_hihnakaytos_paketti"
        android:paddingTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/title_kontakti"
        android:textSize="@dimen/pictureTitles"
        android:textColor="@color/colorTitles2"
        app:fontFamily="@font/cinzel_bold"/>

      <Button
        android:contentDescription="@string/title_motivointi"
        android:id="@+id/simpleImageViewMotivointi"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:drawablePadding="@null"
        android:background="@drawable/motivointi_hihnakaytos_paketti"
        android:paddingTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/title_motivointi"
        android:textSize="@dimen/pictureTitles"
        android:textColor="@color/colorTitles2"
        app:fontFamily="@font/cinzel_bold"/>

      <Button
        android:contentDescription="@string/title_ohittaminen"
        android:id="@+id/simpleImageViewOhittaminen"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:drawablePadding="@null"
        android:background="@drawable/ohittaminen"
        android:paddingTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/title_ohittaminen"
        android:textSize="@dimen/pictureTitles"
        android:textColor="@color/colorTitles2"
        app:fontFamily="@font/cinzel_bold"/>

      <Button
        android:contentDescription="@string/title_kaupunkikavely"
        android:id="@+id/simpleImageViewKaupunkikavely"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:drawablePadding="@null"
        android:background="@drawable/kaupunkikavely"
        android:paddingTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/title_kaupunkikavely"
        android:textSize="@dimen/pictureTitles"
        android:textColor="@color/colorTitles2"
        app:fontFamily="@font/cinzel_bold"/>

    </LinearLayout>
  </ScrollView>

  <android.support.design.widget.BottomNavigationView
    android:id="@+id/nav_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:background="?android:attr/windowBackground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:menu="@menu/bottom_nav_menu"
    app:itemIconTint="@color/colorTitles1"
    app:itemTextColor="@color/colorTitles1"
    app:itemBackground="@color/colorTitles2"/>
</android.support.constraint.ConstraintLayout>
